--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/textMyNotes"
+        android:textColor="@color/white"
+        android:text="@string/my_notes"
+        android:layout_marginEnd="@dimen/margin_textMyNotes"
+        android:layout_marginStart="@dimen/margin_textMyNotes"
+        android:layout_marginTop="@dimen/margin_textMyNotes"
+        android:layout_marginBottom="@dimen/margin_textMyNotes"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="20sp">
+    </TextView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/NoteRecycleView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/textMyNotes"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:clipToPadding="false"
+        app:layout_constraintBottom_toBottomOf="@id/imageAddNotes">
+    </androidx.recyclerview.widget.RecyclerView>
+    <ImageButton
+        android:layout_width="@dimen/size_add_button"
+        android:layout_height="50dp"
+        android:id="@+id/imageAddNotes"
+        android:background="@drawable/background_add_button"
+        android:src="@drawable/ic_button_add"
+        android:tint="@color/colorPrimary"
+        android:padding="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp">
+
+    </ImageButton>
+    </androidx.constraintlayout.widget.ConstraintLayout>
