--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,20 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#292929</color>
+    <color name="SearchIcon">#DBDBDB</color>
+    <color name="colorIcon">#A4A4A4</color>
+    <color name="QuickActionBackGround">#2F2D2E</color>
+    <color name="colorTextHint">#7B7B7B</color>
+    <color name="colorTextSubtitle">#CECECE</color>
+    <color name="colorDefaultNoteColor">#333333</color>
+    <color name="colorNoteSubtitleText">#FAFAFA</color>
+    <color name="colorMiscellaneousBackground">#1F1F1F</color>
+    <color name="colorNoteColor2">#FDBE3B</color>
+    <color name="colorNoteColor4">#3A52FC</color>
+    <color name="colorNoteColor3">#ff4842</color>
+    <color name="colorNoteColor5">#000000</color>
+    <color name="colorDelete">#FF3832</color>
+    <color name="colorSearchvBackground">#333333</color>
+
 </resources>
