--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -46,6 +46,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ImageButton
+                android:id="@+id/delete_button"
+                android:layout_width="35dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/background_add_button"
+                android:padding="5dp"
+                android:src="@drawable/ic_delete"
+                android:tint="@color/black"
+                app:layout_constraintEnd_toEndOf="@id/done_button"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <EditText
                 android:id="@+id/NoteTitle"
                 android:layout_width="match_parent"
